dream big added

--- a/index.html
+++ b/index.html
@@ -27,6 +27,23 @@
             <img src="images/tuhin.png" alt="" srcset="">
         </div>
     </section>
+
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/tuhin.png" alt="" srcset="">
+
+        </div>
+
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h2>become a Web Developer</h2>
+            <p>It is a long established fact that a reader will be distracted by the readable content of a page when
+                looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution
+                of letters, as opposed to using 'Content here, content here', making it look like readable English. Many
+                desktop publishing packages and web page editors now use Lorem Ipsum as their default model text</p>
+            <a class="link-button" href="http://" target="_blank" rel="noopener noreferrer">DONWNLOADE RESUME</a>
+        </div>
+    </section>
 </body>
 
 </html>
